Fix: Overflow of main sections and articles.

--- a/styles/index/others/global.css
+++ b/styles/index/others/global.css
@@ -59,3 +59,10 @@ hr {
     font-family: "poppinsBold";
     src: url(../../../fonts/poppins/Poppins-Bold.ttf)format("truetype");
 }
+
+.main {
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+}
+
