--- a/styles/index/sections/info.css
+++ b/styles/index/sections/info.css
@@ -7,7 +7,6 @@
     background-color: #02202f;
     height: fit-content;
     padding: 0 20px 20px 20px;
-    margin-top: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
