--- a/styles/index/sections/organigrama.css
+++ b/styles/index/sections/organigrama.css
@@ -15,13 +15,14 @@
 }
 
 .article-organigrama {
+    height: fit-content;
+
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
     padding: 30px;
     background-color: lightblue;
-    margin-bottom: 90px;
 }
 
 .organigramaimg {
